# ARC-AGI

./: .gitignore  add_annotate.py  annotate.ipynb  generated_ideas.json  pyproject.toml
apps/: index.html
apps/css/: testing_interface.css
apps/js/: common.js  testing_interface.js
apps/synthetic/: islands.py  main.py
codegen-solver/: llm_utils.py
data/training/: 1b60fb0c.json
llm-finetuning/synthetic/: generate_new.py  main_pattern.py  pattern_prompt.py
llm-finetuning/synthetic/generated_generators/: task_0.py  task_2.py  task_3.py  task_5.py  task_6.py  task_7.py
llm_finetuning/nbs/: inspect_data.ipynb
llm_finetuning/synthetic/: generate_new.py  main.py  simple_grid_definition_task.py  simplepattern.py
llm_finetuning/synthetic/generated_generators/: task_1.py  task_4.py
